adjust build